--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,10 @@ xlsxwriter==3.2.0
 openai==1.51.2
 python-multipart==0.0.17
 translate==3.6.1
-pillow==11.0.0
+pillow==10.4.0
 instagrapi==2.1.3
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+opencv-python==4.10.0.84
