google_auth 폴더 .gitignore 에 추가 - 문승종 20241206

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,4 @@ __pycache__/
 docker-compose.override.yml
 
 #JSON 파일
-app/static/auth/google_auth.json
-app/static/auth/google_auth_wiz.json
+app/static/auth/*
